Fix page jump navigation z-index

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -717,6 +717,7 @@ hgroup {
   position: sticky;
   top: calc(var(--header-height) + var(--header-status-height));
   background: var(--bg);
+  z-index: 1;
 
   div {
     display: flex;
